Fix max-height because it hides cocontent on mobile (but we lose animation)

--- a/manual.css
+++ b/manual.css
@@ -114,7 +114,7 @@ p {
 }
 
 .collapse.expanded {
-    max-height: 1200px;
+    max-height: inherit;
     opacity: 1;
 }
 
